--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,15 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
+  <ion-navbar color="primary">
+    <ion-title class="title">
+      Music Forum
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <img src="../../assets/imgs/X4NBV7RY6G.jpg">
+  <p class="ionhome">Click the button below to go to the forum.</p>
+    <button ion-item (click)="goToPosts()" color="primary" full>
+      Enter
+    </button>
 </ion-content>
